--- a/app/views/zines/index.html.erb
+++ b/app/views/zines/index.html.erb
@@ -2,9 +2,10 @@
 <ul>
   <% @zines.each do |zine| %>
     <li>
-      <h2><%= link_to zine["title"], zine_path(zine["id"]) %></h2>
-      <p><%= zine["description"] %></p>
-      <p>Price: $<%= zine["price"] %></p>
+      <h2><%= link_to zine[1], zine_path(zine[0].to_i) %></h2>
+      <p><%= zine[2] %></p>
+      <p>Price: $<%= zine[3] %></p>
+      <%= button_to 'Add to Cart', add_cart_path(zine[0].to_i), method: :post, class: 'add-to-cart-btn' %>
     </li>
   <% end %>
 </ul>
