--- a/app/views/zines/show.html.erb
+++ b/app/views/zines/show.html.erb
@@ -1,4 +1,5 @@
-<h1><%= @zine["title"] %></h1>
-<p><%= @zine["description"] %></p>
-<p>Price: $<%= @zine["price"] %></p>
+<h1><%= @zine[1] %></h1>
+<p><%= @zine[2] %></p>
+<p>Price: $<%= @zine[3] %></p>
+<%= button_to 'Add to Cart', add_cart_path(id: @zine[0]), method: :post, class: 'add-to-cart-btn' %>
 <%= link_to "Back to shop", zines_path %>
