--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -1,7 +1,36 @@
 <h1>Your Cart</h1>
-<ul>
-  <% (@cart || {}).each do |zine_id, quantity| %>
-    <li>Zine ID: <%= zine_id %> | Quantity: <%= quantity %></li>
-  <% end %>
-</ul>
-<%= link_to "Back to shop", root_path %>
+
+<% if @cart_items.any? %>
+  <table>
+    <thead>
+      <tr>
+        <th>Product</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Total</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @cart_items.each do |item| %>
+        <tr>
+          <td><%= item["name"] %></td>
+          <td>$<%= item["price"].to_i %></td>
+          <td><%= item["quantity"] %></td>
+          <td>$<%= item["price"].to_i * item["quantity"].to_i %></td>
+          <td>
+            <%= link_to 'Remove', remove_from_cart_path(product_id: item["id"].to_i), data: { "turbo-method": :delete } %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <h3>Total: $<%= @total_price %></h3>
+
+  <%= button_to 'Check out', checkout_path, method: :get, class: 'checkout-btn' %>
+
+  <%= link_to 'Clear Cart', clear_cart_path, method: :delete %>
+<% else %>
+  <p>Your cart is empty. <%= link_to 'Go back to shopping', root_path %></p>
+<% end %>
